Fix footer overlapping issue

--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -227,6 +227,11 @@ dt {
   }
 }
 
+#footer {
+  position: relative;
+  z-index: 1; /* or any value greater than 0 */
+}
+
 section {
   max-width:650px;
   padding: 30px 0px 50px 0px;
@@ -315,4 +320,3 @@ section {
     display: none;
   }
 }
-
